--- a/qr/Views/Login/SignIn.cshtml
+++ b/qr/Views/Login/SignIn.cshtml
@@ -14,40 +14,53 @@
     <title>@ViewBag.Title – приложение ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    @Styles.Render("~/Content/bundle")
+    @Scripts.Render("~/Scripts/bundle")
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/Scripts/DevExtremeBundle")
 </head>
 <body>
     <div class="row align-items-center h-100">
         <div class="col w-25">
 
         </div>
-        <div class="col align-self-center">
+        <div class="col align-self-center" id="SignIn">
             <div class="card align-items-center">
                 <div class="card-body">
-                    <h5 class="card-title">Authorization</h5>
+                    <h5 class="card-title">Вход</h5>
                     @using (Html.BeginForm())
                     {
-                        <form>
-                            <div class="form-group">
-                                <label for="Email">Email address</label>
-                                <input type="email" class="form-control" id="Email" name="Email" aria-describedby="emailHelp" placeholder="Enter email" />
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                            </div>
-                            <div class="form-group">
-                                <label for="Pass">Password</label>
-                                <input type="password" class="form-control" id="Pass" name="Pass" placeholder="Password" />
-                            </div>
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                            <button type="button" class="btn btn-success">SignUp</button>
-                        </form>
+                        <div class="form-group">
+                            <label for="Email">Email</label>
+                            <input type="email" class="form-control" id="Email" name="Email" aria-describedby="emailHelp" placeholder="Enter email" />
+                            <small id="emailHelp" class="form-text text-muted">Мы не распространяем данные наших пользователей</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="Pass">Password</label>
+                            <input type="password" class="form-control" id="Pass" name="Pass" placeholder="Пароль" />
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+                            <label class="form-check-label" for="exampleCheck1">Запомнить меня</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="button" class="btn btn-success" onclick="showRegistration()">Войти</button>
                     }
                 </div>
             </div>
         </div>
+        <div class="col align-self-center" style="display: none;" id="Registration">
+            @(Html.Partial("_Register"))
+        </div>
         <div class="col w-25"></div>
-    </div>
+        </div>
+        <script>
+            function showRegistration() {
+                $("#Registration").css("display", "");
+                $("#SignIn").css("display", "none");
+            }
+        </script>
 </body>
 </html>
