--- a/qr/Views/Login/SignIn.cshtml
+++ b/qr/Views/Login/SignIn.cshtml
@@ -45,8 +45,8 @@
                             <input type="checkbox" class="form-check-input" id="exampleCheck1" />
                             <label class="form-check-label" for="exampleCheck1">Запомнить меня</label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <button type="button" class="btn btn-success" onclick="showRegistration()">Войти</button>
+                        <button type="submit" class="btn btn-primary">Войти</button>
+                        <button type="button" class="btn btn-success" onclick="showRegistration()">Регистрация</button>
                     }
                 </div>
             </div>
