--- a/qr/Views/Home/Index.cshtml
+++ b/qr/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
-                @*@Html.Action("About", "Home")*@
+                @Html.Action("Index", "About", new { userID = User.Identity.Name})
             </div>
         </div>
     </div>
@@ -39,8 +39,9 @@
                     c.AddFor(o => o.Title).Caption("Название");
                     c.AddFor(o => o.Description).Caption("Описание");
                 })
-                .Editing(e => e.AllowAdding(true).AllowUpdating(true))
+                .Editing(e => e.AllowAdding(true).AllowUpdating(true).AllowDeleting(true))
                 .OnRowClick("function(e) { window.location.href = '"+ Url.Action("Products","Organizations",null, Request.Url.Scheme) +"/' + e.key; }")
+                .HoverStateEnabled(true)
                 )
             </div>
         </div>
