--- a/qr/Views/Login/_Register.cshtml
+++ b/qr/Views/Login/_Register.cshtml
@@ -14,6 +14,10 @@
                         <input type="text" class="form-control" id="Fio" name="Fio" placeholder="Фамилия Имя Отчество" />
                     </div>
                     <div class="form-group">
+                        <label for="pay_token">Ключ для сервиса оплаты</label>
+                        <input type="text" class="form-control" id="pay_token" name="pay_token" placeholder="Ключ для сервиса оплаты" />
+                    </div>
+                    <div class="form-group">
                         <label for="Pass">Пароль</label>
                         <input type="password" class="form-control" id="Pass" name="Pass" placeholder="Пароль" />
                     </div>
