--- a/qr/Views/Shared/_Layout.cshtml
+++ b/qr/Views/Shared/_Layout.cshtml
@@ -20,20 +20,20 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Личный кабинет<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Организации</a>
+                    <a class="nav-link" href="@Url.Action("Index","Home")">Личный кабинет<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
+        <div class="collapse navbar-collapse col-lg-1">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Выйти</a>
+                </li>
+            </ul>
+        </div> 
     </nav>
     <div class="container body-content" style="margin-top: 40px;">
         @RenderBody()
